--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
     <h1>Welcome to the Ad Generator!</h1>
-    <form action="/.netlify/functions/generate" method="post" enctype="multipart/form-data" onsubmit="return disableButton()">
+    <form action="{{ url_for('main.generate') }}" method="post" enctype="multipart/form-data" onsubmit="return disableButton()">
         <label for="image">Image:</label>
         <input type="file" name="image" id="image" accept=".png, .jpg, .jpeg" onchange="previewImage(this)" required />
         <br />
@@ -118,7 +118,29 @@
         <button type="submit" id="generateButton" disabled>Generate Image</button>
         <div id="loading" class="loading" style="display: none;">Loading...</div>
     </form>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
 
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyB2FI0Ock9vRInvzHQqJhQd928iA6kZxMQ",
+          authDomain: "creative-ad.firebaseapp.com",
+          projectId: "creative-ad",
+          storageBucket: "creative-ad.appspot.com",
+          messagingSenderId: "763383600698",
+          appId: "1:763383600698:web:d194717e629f88725b4703",
+          measurementId: "G-8DYT1HSHM6"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+      </script>
     <script>
         function disableButton() {
             // Disable the button
